# fu540-immutable-bootloader

./: CMakeLists.txt  config.cmake  flash.sh
drivers/: CMakeLists.txt
drivers/clkutils/: clkutils.cmake
drivers/ememoryotp/: ememoryotp.cmake
drivers/fdt/: fdt.cmake
drivers/gpio/: gpio.c  gpio.cmake  gpio.h
drivers/gpt/: gpt.cmake
drivers/sd/: sd.cmake
drivers/spi/: spi.cmake
drivers/uart/: uart.cmake
fsbl/: dtb.S  dtb.S.in  main.c  version.c  version.c.in
keycore_driver/: CMakeLists.txt
keycore_driver/interfaces/: interfaces.cmake
keycore_driver/interfaces/ethernet/: ether_info.c  ether_info.c.in  keycore_ether.c
keycore_driver/src/: keycore.c
lds/: memory.lds  ux00_fsbl.lds
ux00boot/: CMakeLists.txt
